# ralertsinua

./: .dockerignore  .env.default  .envrc  .gitattributes  .gitignore  .justfile  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.musl  LICENSE  NOTES.md  README.md  artifacts.json  build.rs  clippy.toml  index.html  oranda.json  ralertsinua-installer.sh.txt  readme.html  rustfmt.toml  sonar-project.properties  ttyd.sh
.config/: config.json5  config.toml
.data/: config.toml  create_regions_table.sql
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  coverage.yml  lint.yml  package-binary.yml  test.yml  web.yml
artifacts/: index.html
assets/: create_regions_table.sql  ukraine.json  ukraine.wkt
benches/: TODO.md  benchmark.rs
book/: 404.html  chapter_1.html  print.html
book/css/: variables.css
data/: ukraine.e.wkt  ukraine.geojson  ukraine.poly  ukraine.wkt  ukraine_boundaries.json  ukraine_boundaries.kml
docs/: .gitignore  book.toml  oranda.json  oranda.render.json
docs/src/: NOTES.md  TOKEN.md
funding/: index.html
locales/: en.toml  uk.toml
ralertsinua-geo/: Cargo.toml  README.md
ralertsinua-geo/assets/: ukraine.json
ralertsinua-geo/src/: client.rs  constants.rs  grid.rs  grid.rs.copy  lib.rs  location.rs  map.rs  region.rs  utils.rs
ralertsinua-http/: Cargo.toml  README.md  build.rs
ralertsinua-http/src/: cache.rs  client.rs  error.rs  lib.rs
ralertsinua-models/: Cargo.toml  README.md
ralertsinua-models/src/: air_raid_alert_oblast_status.rs  air_raid_alert_oblast_statuses.rs  alert.rs  alert_status.rs  alert_type.rs  alerts.rs  constants.rs  error.rs  lib.rs  location_type.rs  region.rs
src/: _event.rs  _handler.rs  action.rs  alerts.rs  api.rs  app.rs  cli.rs  components.rs  config.rs  constants.rs  data.rs  draw.rs  error.rs  fs.rs  handler.rs  layout.rs  lib.rs  main.rs  mode.rs  tui.rs  tui_helpers.rs  ui.rs  ukraine.rs  utils.rs
src/components/: footer.rs  fps.rs  header.rs  list.rs  logger.rs  map.rs
src/services/: alerts.rs  geo.rs  mod.rs
tools/: docs.sh  install-from-release.sh  musl.sh  publish.sh
