[package]
name = "alertsinua-tui"
version = "0.1.1"
authors = ["voznik <mrvoznik@gmail.com>"]
license = "MIT"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
arrayvec = "0.7.4"
async-trait = "0.1.80"
better-panic = "0.3"
chrono = "0.4"
clap = { version = "4.5", features = [ "derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles", ] }
color-eyre = "0.6"
config = "0.14.0"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
csv = "1.3.0"
delegate = "0.12.0"
derive_deref = "1.1.1"
directories = "5.0"
dotenv = "0.15"
futures = "0.3"
geo = "0.28.0"
getset = "0.1"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.15"
log = "0.4.21"
pretty_assertions = "1.4.0"
ratatui = { version = "0.26.2", features = ["serde", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
signal-hook = "0.3.17"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-native-tls"] }
strip-ansi-escapes = "0.2.0"
strum = "0.26"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
wkt = "0.10.3"
# either = "1.11"
# futures-util = "0.3"
# geozero = { version = "0.12.0", features = ["with-csv", "with-geo"] }

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitoxide", "cargo"] }
dotenv = "0.15"
