[package]
name = "ralertsinua"
description = "Rust async API wrapper (reqwest) & TUI (ratatui) for alerts.in.ua"
repository = "https://github.com/voiceapiai/ralertsinua"
categories = ["api-bindings", "geo"]
keywords = ["geo", "api", "tui", "cli"]
version = "0.3.3"
authors = ["voznik <mrvoznik@gmail.com>"]
license = "MIT"
edition = "2021"

build = "build.rs"

[workspace]
members = ["ralertsinua-http", "ralertsinua-geo", "ralertsinua-models"]

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[package.metadata.i18n]
available-locales = ["en", "uk"]
default-locale = "en"
load-path = "locales"

[dependencies]
ralertsinua-http = { path = "ralertsinua-http", version = "0.3.3" }
ralertsinua-geo = { path = "ralertsinua-geo", version = "0.3.3" }
ralertsinua-models = { path = "ralertsinua-models", version = "0.3.3", features = [
    "tui",
] }

async-trait = "0.1.80"
better-panic = "0.3"
chrono = "0.4"
clap = { version = "4.5", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
delegate = "0.12.0"
derive_deref = "1.1.1"
directories = "5.0"
dotenvy = "0.15"
dotenvy_macro = "0.15"
dotenv_config = "0.1.9"
futures = "0.3"
geo = "0.28.0"
geozero = "0.12.0"
getset = "0.1"
human-panic = "2.0.0"
icu_collator = "1.4.0"
icu_locid = "1.4.0"
rust-i18n = "3"
lazy_static = "1.4.0"
libc = "0.2.15"
log = "0.4.21"
pretty_assertions = "1.4.0"
ratatui = { version = "0.26.2", features = ["serde", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
rust-embed = "8.3.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = "0.26"
strum_macros = "0.26"
sys-locale = "0.3"
thiserror = "1.0"
throbber-widgets-tui = "0.5"
time = { version = "0.3.36", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
tui-logger = { version = "0.11", features = ["tracing-support"] }
ratatui-macros = "0.2.4"
tui-prompts = "0.3.11"
memoize = "0.4.2"

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitoxide", "cargo"] }

[dev-dependencies]
mockito = "1.4.0"
codspeed-criterion-compat = "2.6.0"
criterion = { version = "0.5.1", features = ["tokio", "async_tokio"] }
fakeit = "1.2.0"

[[bench]]
name = "benchmark"
harness = false
