[package]
name = "ralertsinua"
description = "Rust async API wrapper (reqwest) & TUI (ratatui) for alerts.in.ua"
repository = "https://github.com/voiceapiai/ralertsinua"
categories = ["api-bindings", "geo"]
keywords = ["geo", "api", "tui", "cli"]
version = "0.5.2"
authors = ["voiceapiai <voiceapiai@gmail.com>"]
license = "MIT"
edition = "2021"
exclude = [
  "assets/*",
  ".github",
  "CONTRIBUTING.md",
  "*.log",
  "tags",
]
rust-version = "1.74.0"

build = "build.rs"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = false

[profile.release]
panic = 'unwind'
# debug = true

[workspace]
members = ["ralertsinua-http", "ralertsinua-geo", "ralertsinua-models"]

[package.metadata.release]
allow-branch = ["main"]
tag-name = "{{version}}"

[package.metadata.i18n]
available-locales = ["en", "uk"]
default-locale = "en"
load-path = "locales"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl", # INFO: musl is built using clux/muslrust
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

# TODO: https://github.com/moonrepo/proto/blob/master/Cargo.toml#L71
[workspace.metadata.dist.github-custom-runners]
x86_64-unknown-linux-musl = "clux/muslrust"
# aarch64-unknown-linux-gnu = "buildjet-4vcpu-ubuntu-2204-arm"
# aarch64-unknown-linux-musl = "buildjet-4vcpu-ubuntu-2204-arm"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
ralertsinua-models = { path = "ralertsinua-models", version = "0.5.2" }
ralertsinua-geo = { path = "ralertsinua-geo", version = "0.5.2", features = [
    "tui",
] }
ralertsinua-http = { path = "ralertsinua-http", version = "0.5.2", features = [
    "cache",
], default-features = false }

async-trait = "0.1.80"
bincode = "1.3.3"
chrono = "0.4"
clap = { version = "4.5", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
delegate = "0.12.0"
derive_deref = "1.1.1"
directories = "5.0"
dotenv_config = "0.1.9"
dotenvy = "0.15"
dotenvy_macro = "0.15"
futures = "0.3"
geo = "0.28.0"
getset = "0.1"
dur = "0.5.1"
icu_collator = "1.4.0"
icu_locid = { version = "1.4.0", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.21"
michie = "3.0.2"
miette = { version = "7.2.0", features = ["fancy", "serde"] }
ratatui = { version = "0.26.3", features = ["serde", "macros"] }
ratatui-macros = "0.4.0"
rust-i18n = "3.0.1"
serde = { version = "1.0.198", features = ["derive"], default-features = false }
serde_json = "1.0.116"
serde_with = "3.8.1"
signal-hook = "0.3.17"
strum = "0.26"
strum_macros = "0.26"
sys-locale = "0.3"
thiserror = "1.0"
throbber-widgets-tui = "0.5"
time = { version = "0.3.36", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-serde = "0.9.0"
tokio-util = "0.7.9"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
tui-logger = { version = "0.11", features = ["tracing-support"] }
# tui-popup = "0.3.1" # TODO
# tui-prompts = "0.3.11" # TODO

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitoxide", "cargo"] }

[dev-dependencies]
mockall = "0.12.1"
mockito = "1.4.0"
codspeed-criterion-compat = "2.6.0"
criterion = { version = "0.5.1", features = ["tokio", "async_tokio"] }
fakeit = "1.2.0"
pretty_assertions = "1.4.0"


[features]
default = ["cache", "reqwest-default-tls"]

cache = ["ralertsinua-http/cache"]
# Passing the TLS features to reqwest.
reqwest-default-tls = ["ralertsinua-http/reqwest-default-tls"]
reqwest-rustls-tls = ["ralertsinua-http/reqwest-rustls-tls"]
reqwest-native-tls = ["ralertsinua-http/reqwest-native-tls"]

[[bench]]
name = "benchmark"
harness = false
