[package]
name = "ralertsinua-geo"
description = "Geo compatibility layer for alerts.in.ua"
repository = "https://github.com/voiceapiai/ralertsinua"
categories = ["api-bindings"]
keywords = ["geo", "api",  "tui", "cli"]
version = "0.3.0"
license = "MIT"
edition = "2021"
authors = ["voznik <mrvoznik@gmail.com>"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ralertsinua-models = { path = "../ralertsinua-models", version = "0.3.0" }

color-eyre = "0.6"
delegate = "0.12.0"
geo = "0.28.0"
getset = "0.1"
lazy_static = "1.4.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0"
wkt = "0.10.3"
