[package]
name = "ralertsinua-geo"
description = "Geo compatibility layer for alerts.in.ua"
repository = "https://github.com/voiceapiai/ralertsinua"
categories = ["api-bindings"]
keywords = ["geo", "api", "tui", "cli"]
version = "0.3.3"
license = "MIT"
edition = "2021"
authors = ["voznik <mrvoznik@gmail.com>"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ralertsinua-models = { path = "../ralertsinua-models", version = "0.3.3" }

async-trait = "0.1.80"
color-eyre = "0.6"
delegate = "0.12.0"
geo = "0.28.0"
geojson = { version = "0.24.1", features = ["geo-types"] }
geozero = "0.12.0"
getset = "0.1"
icu_collator = "1.4.0"
icu_locid = "1.4.0"
num-traits = "0.2.19"
rstar = "0.12.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0"
wkt = "0.10.3"
