[package]
name = "ralertsinua-geo"
description = "Geo compatibility layer for alerts.in.ua"
repository = "https://github.com/voiceapiai/ralertsinua"
categories = ["api-bindings"]
keywords = ["geo", "api", "tui", "cli"]
version = "0.5.2"
license = "MIT"
edition = "2021"
authors = ["voiceapiai <voiceapiai@gmail.com>"]
readme = "./README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.28.0"
geojson = { version = "0.24.1", features = ["geo-types"] }
# geozero = "0.12.0"
icu_collator = "1.4.0"
icu_locid = { version = "1.4.0", features = ["serde"] }
lazy_static = "1.4.0"
miette = { version = "7.2.0", features = ["serde"] }
ratatui = { version = "0.26.2", optional = true }
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0"
wkt = "0.10.3"

[dev-dependencies]
serde_json = "1.0.116"

[features]
default = []
tui = ["ratatui"]
