[package]
name = "ralertsinua-http"
description = "HTTP compatibility layer for alerts.in.ua"
repository = "https://github.com/voiceapiai/ralertsinua"
categories = ["api-bindings"]
keywords = ["geo", "api", "tui", "cli"]
version = "0.4.0"
license = "MIT"
edition = "2021"
authors = ["voznik <mrvoznik@gmail.com>"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ralertsinua-models = { path = "../ralertsinua-models", version = "0.4.0" }

async-trait = "0.1.80"
http-cache-reqwest = "0.14.0"
miette = { version = "7.2.0", features = ["serde"] }
log = "0.4.21"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.3.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0"

[dev-dependencies]
mockito = "1.4.0"
tokio = { version = "1.35.1", features = ["full"] }
