[package]
name = "ralertsinua-http"
description = "HTTP compatibility layer for alerts.in.ua"
repository = "https://github.com/voiceapiai/ralertsinua"
categories = ["api-bindings"]
keywords = ["geo", "api", "tui", "cli"]
version = "0.5.0"
license = "MIT"
edition = "2021"
authors = ["voiceapiai <voiceapiai@gmail.com>"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ralertsinua-models = { path = "../ralertsinua-models", version = "0.5.0" }

async-trait = "0.1.80"
bytes = "1.6.0"
http = "1.1.0"
miette = { version = "7.2.0", features = [] }
log = "0.4.21"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0"
quick_cache = { version = "0.5", default-features = false, optional = true }

[features]
default = ["cache"]
cache = ["quick_cache"]

[dev-dependencies]
mockall = "0.12.1"
mockito = "1.4.0"
tokio = { version = "1.35.1", features = ["full"] }
