[package]
name = "ralertsinua-http"
description = "HTTP compatibility layer for alerts.in.ua"
repository = "https://github.com/voiceapiai/ralertsinua"
categories = ["api-bindings"]
keywords = ["geo", "api", "tui", "cli"]
version = "0.5.2"
license = "MIT"
edition = "2021"
authors = ["voiceapiai <voiceapiai@gmail.com>"]
readme = "./README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-trait = "0.1.80"
bytes = "1.6.0"
http = "1.1.0"
log = "0.4.21"
miette = { version = "7.2.0", features = [] }
native-tls = { version = "0.2.11", optional = true }
quick_cache = { version = "0.5", default-features = false, optional = true }
ralertsinua-models = { path = "../ralertsinua-models", version = "0.5.2" }
#[rustfmt::skip]
reqwest = { version = "0.12", features = [
  "json",
], default-features = false, optional = true }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0"
time = { version = "0.3.36", features = ["serde", "formatting", "parsing"] }

[features]
default = ["cache", "reqwest-default-tls"]

cache = ["dep:quick_cache"]

# Passing the TLS features to reqwest.
reqwest-default-tls = ["reqwest/default-tls"]
reqwest-rustls-tls = ["reqwest/rustls-tls"]
reqwest-native-tls = ["reqwest/native-tls"]

[dev-dependencies]
mockall = "0.12.1"
mockito = "1.4.0"
tokio = { version = "1.35.1", features = ["full"] }
