[package]
name = "ralertsinua-models"
description = "Data Transfer Object for alerts.in.ua"
repository = "https://github.com/voiceapiai/ralertsinua"
categories = ["api-bindings"]
keywords = ["geo", "api",  "tui", "cli"]
version = "0.3.0"
license = "MIT"
edition = "2021"
authors = ["voznik <mrvoznik@gmail.com>"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
delegate = "0.12.0"
getset = "0.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
time = { version = "0.3.36", features = ["serde", "formatting", "parsing", "macros"] }
time-macros = "0.2.18"
