[package]
name = "ralertsinua-models"
description = "Data Transfer Object for alerts.in.ua"
repository = "https://github.com/voiceapiai/ralertsinua"
categories = ["api-bindings"]
keywords = ["geo", "api", "tui", "cli"]
version = "0.5.2"
license = "MIT"
edition = "2021"
authors = ["voiceapiai <voiceapiai@gmail.com>"]
readme = "./README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1"
log = "0.4.21"
miette = { version = "7.2.0", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_with = "3.8.1"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
time = { version = "0.3.36", features = [
    "serde",
    "formatting",
    "parsing",
    "macros",
] }
time-macros = "0.2.18"

[dev-dependencies]
serde_json = "1.0.116"
# [package.metadata.docs.rs]
